CAY-2378 Switch usage of SelectQuery to ObjectSelect internally